foundation-code/main/default/objects/Product_Combo_Logic_Inclusion__mdt/Product_Combo_Logic_Inclusion__mdt.object-meta.xml
<CustomObject>
    <label>Product Combo Logic Inclusion</label>
    <pluralLabel>Product Combo Logic Inclusion</pluralLabel>
</CustomObject>