foundation-code/main/default/objects/Product_Combo_Logic_Inclusion__mdt/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARR</fullName>
                <default>true</default>
                <label>ARR</label>
            </value>
            <value>
                <fullName>OTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>