foundation-code/main/default/objects/Product_Combo_Logic_Inclusion__mdt/fields/Is_Special_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Special Product?</label>
    <type>Checkbox</type>
</CustomField>