foundation-code/main/default/objects/Product_Combo_Logic_Inclusion__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>