foundation-code/main/default/objects/Product_Combo_Logic_Inclusion__mdt/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear Capture</fullName>
                <default>true</default>
                <label>Clear Capture</label>
            </value>
            <value>
                <fullName>EINV</fullName>
            </value>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>Invoicing API</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
            <value>
                <fullName>Clear Supply Chain</fullName>
            </value>
            <value>
                <fullName>Notice Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>