foundation-code/main/default/objects/Product_Combo_Logic_Inclusion__mdt/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Product_Line__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Billing_Type__c</columns>
    <columns>Is_Special_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
</ListView>